--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-sm-12">
 
-          <h1>Understand Your Product Idea From a Tech Point of View</h1>
+          <h1>Understanding Your Product Idea From a Tech Point of View</h1>
 
         </div>
       </div>
