--- a/source/index.html
+++ b/source/index.html
@@ -20,6 +20,7 @@
         </div>
       </div>
 
+      <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
 
           <h2>Join other non-tech founders and learn what does it take to build a tech product today.</h2>
