--- a/source/index.html
+++ b/source/index.html
@@ -38,7 +38,7 @@
             <div class="row">
               <div class="col-sm-8 col-sm-offset-2">
                 <p>
-                  Join our <a href="http://www.meetup.com/understanding-your-product-idea-from-a-tech-point-of-view">Meetup Group</a> dedicated to non-tech founders in London, UK.
+                  Join our <a href="http://www.meetup.com/understanding-your-product-idea-from-a-tech-point-of-view">Meetup group</a> dedicated to non-tech founders in London, UK.
                 </p>
               </div>
             </div>
