--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
 
-          <h2>Join other non-tech founders and learn what does it take to build a tech product today.</h2>
+          <h2>Join other non-tech founders and learn what does it take to build your tech product today.</h2>
 
         </div>
       </div>
@@ -75,7 +75,6 @@
 
     ga('create', 'UA-1519369-32', 'auto');
     ga('send', 'pageview');
-
   </script>
 </body>
 </html>
